# ACWW-Letter-Editor

./: .gitignore  ACWW Letter Editor.sln  CLAUDE.md  README.md  resources.qrc
ACWW Letter Editor/: ACWW Letter Editor.csproj  Form1.Designer.cs  Form1.cs  OpenFileDialogForm.Designer.cs  OpenFileDialogForm.cs  OpenFileDialogForm.resx  Program.cs
ACWW Letter Editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
docs/: NDS_FORMAT.md  item-hex-codes.md  save-file-format.md
qml/: SaveBrowser.qml  main.qml
qml/components/: SlotDelegate.qml  StatusBar.qml
qml/dialogs/: CreateLetterDialog.qml  NoPlayersDialog.qml  ReaddressLetterDialog.qml  UnsavedChangesDialog.qml
references/Green Letter (Research)/: Green Letter (Opened) (Bud to Jitters).ltr  Green Letter (Unopened) (Bud to Jitters).ltr
references/LETTERS/(2) To Barnacle/: (3) from Josh.ltr  (4) from Kammy.ltr
references/LETTERS/(3) To Josh/: (2) from Barnacle.ltr
references/LETTERS/(4) To Kammy/: (1) from Kamek.ltr  (3) from Josh.ltr
references/LETTERS/primary save/: letter01.ltr  letter02.ltr  letter03.ltr  letter04.ltr  letter06.ltr  letter07.ltr  letter09.ltr  letter10.ltr  letter11.ltr
references/LETTERS/secondary save/: letter01.ltr  letter03.ltr  letter05.ltr  letter06.ltr  letter07.ltr  letter08.ltr  letter09.ltr  letter11.ltr
src/: backend.cpp  backend.h  cloth_loader.cpp  font_loader.cpp  itemdatabase.h  letter.cpp  letter.h  letter_icons.h  lettercanvasitem.cpp  letterconstants.h  main.cpp  nds_rom.cpp  savefile.cpp  savefile.h
tools/font-extractor/: CMakeLists.txt  README.md
tools/font-extractor/src/: extract_font.cpp  nds_rom.cpp
tools/letter-editor/: CMakeLists.txt  README.md  letter-editor.pro  resources.qrc
tools/letter-editor/qml/: SaveBrowser.qml  main.qml
tools/letter-editor/qml/components/: SlotDelegate.qml
tools/letter-editor/src/: acww_encoding.h  backend.cpp  backend.h  cloth_loader.cpp  cloth_loader.h  font_loader.cpp  font_loader.h  framelesswindowhelper.cpp  framelesswindowhelper.h  icon_loader.cpp  icon_loader.h  itemdatabase.cpp  letter.cpp  letter.h  letter_icons.h  lettercanvasitem.cpp  lettercanvasitem.h  letterconstants.h  lettericonprovider.h  main.cpp  nds_rom.h  savefile.cpp  savefile.h
tools/letter-previewer/: CMakeLists.txt  README.md  letter-previewer.pro
tools/letter-previewer/qml/: main.qml
tools/letter-previewer/src/: backend.cpp  backend.h  font_loader.cpp  font_loader.h  letter_canvas.cpp  letter_canvas.h  lettercanvasitem.cpp  lettercanvasitem.h  letterconstants.h  lz77.h  main.cpp  mainwindow.cpp  mainwindow.h  stationery_loader.cpp  stationery_loader.h
tools/stationery-extractor/: CMakeLists.txt  README.md
tools/stationery-extractor/src/: extract_2d_paper.cpp  lz77.cpp
